apps/postgres-operator/allow-to-apiserver.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-to-apiserver-cnpg
  namespace: kamaji-system
spec:
  selector: (app.kubernetes.io/name == 'cloudnative-pg') || (cnpg.io/cluster == 'kamaji-postgres')
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        services:
          name: kubernetes
          namespace: default
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-cnpg-webhook
  namespace: kamaji-system
spec:
  selector: app.kubernetes.io/name == 'cloudnative-pg'
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 9443
